Changes made with André to fix the map, the current-user path that was broken, the buttons on the pet show page to align position with the title

--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -1,6 +1,8 @@
 .mapboxgl {
   max-width: 200px;
   height: 100vh;
+  position: sticky;
+  top: 0;
 }
 
 .mapboxgl-popup-content {
